[package]
name = "two-party-ecdsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8"
zeroize = "1"
sha3 = "0.10"
sha2 = "0.10"
hmac = "0.12"
rayon = "1"
serde = "1"
serde_derive = "1.0"
itertools = "0.10"
bit-vec = "0.6"
getrandom = { version = "0.2", features = ["js"] }
num-bigint = { version = "0.4", features = ["serde"], optional = true }
num-traits = "0.2"
num-integer = "0.1"
lazy_static = "1.4"
hex = { version = "0.4", features = ["serde"] }


[dependencies.rust-gmp]
version = "0.5.0"
features = ["serde_support"]
git = "https://github.com/KZen-networks/rust-gmp"

[dependencies.secp256k1]
version = "0.21.0"
features = ["rand", "serde"]

[dev-dependencies]
serde_json = "1"

[features]
default = ["num-bigint"]